# http_file_server-rs

./: .gitignore  Cargo.toml  README.md
src/: dir.html  dir.min.html  main.rs
